ZOOKEEPER-3755: Use maven to create fatjar
- replace ant build.xml with maven pom.xml for zookeeper-contrib-fatjar module
- create maven profile "fatjar" to build a fatjar file.
- update readme files